# Survey_Proj

./: .gitignore  AGENTS.md  CONTEXT.md  env.txt.example  requirements.txt
.github/workflows/: ci.yml
3D_Model/: 2D_Map.pgw
3D_Model/scene_a/: metadata.json
TODOList/: 一阶段_主链路闭环.txt  三阶段_协同SLAM实现.txt  二阶段_基础功能增强.txt  五阶段_系统集成与测试.txt  四阶段_数据融合与优化.txt  附录_V2.0特性清单.txt
config/dds/: cyclonedds.xml
docs/: 3d-scene-feature.md  deployment-guide.md  postgresql-setup.md  ros2-packages.md  technical-report.md  user-manual.md
docs/adr/: 0001-phase1-architecture.md  0002-phase2-enhancements.md  0003-phase3-collaborative-slam.md  0004-phase4-data-fusion.md  0005-phase5-integration-testing.md
scripts/: comparative_experiments.py  create_world_file.py  integration_test.sh  robustness_tests.py  setup_env.sh  setup_postgresql.sh  simulation_experiments.py  start_all.sh  topdown_map_render.py
src/backend/: main.py
src/ros2_ws/src/common_interfaces/: CMakeLists.txt  package.xml
src/ros2_ws/src/common_interfaces/msg/: Heartbeat.msg  NavigationGoal.msg  NavigationStatus.msg  SystemAlert.msg  UAVStatus.msg  UGVStatus.msg  WaypointMission.msg  WaypointMissionStatus.msg
src/ros2_ws/src/uav_sim/: package.xml  setup.py
src/ros2_ws/src/uav_sim/config/: uav_params.yaml
src/ros2_ws/src/uav_sim/launch/: uav_sim.launch.py
src/ros2_ws/src/uav_sim/models/m300_rtk/: model.config  model.sdf
src/ros2_ws/src/uav_sim/uav_sim/: uav_camera_sim.py  uav_controller.py  uav_mission_controller.py
src/ros2_ws/src/uav_sim/worlds/: empty_with_ground.world
src/slam/: __init__.py  coarse_registration.py  collaborative_optimizer.py  consistency.py  data_types.py  (+8 more)
tests/: __init__.py  test_factor_graph_optimization.py  test_imu_preintegration.py  test_pipeline_nodes.py  test_registration_and_consistency.py  test_scan_to_map_icp.py
(+53 files in other folders)
